# mafia_qa_2

./: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: fsm_comments.txt
src/: consts.py  llm_interface.py  main.py  utils.py
src/database/: fragments_db.py  init_rag.py  init_rag_new.py  rule_fragment.py  text_processor.py
src/database/models/: qna_pair.py  rule_fragment.py
src/llm/: llm_interface.py  prompt.py
tests/: conftest.py  test_init_rag.py
