[project]
name = "mafia-assistant-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.16.0",
    "chromadb>=0.5.23",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain-community>=0.3.12",
    "langchain-huggingface>=0.1.2",
    "litellm>=1.55.12",
    "numpy>=1.26.4",
    "pydantic>=2.10.3",
    "pypdf2>=3.0.1",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "sentence-transformers>=3.3.1",
]
